--- a/TaskAssignmentSystem/Views/Teams/ForWorkspace.cshtml
+++ b/TaskAssignmentSystem/Views/Teams/ForWorkspace.cshtml
@@ -173,7 +173,7 @@
 
     /* Container */
     .container {
-        max-width: 1200px;
+        min-width: 1100px;
         margin: 0 auto;
     }
 
