--- a/TaskAssignmentSystem/Views/Shared/_Layout.cshtml
+++ b/TaskAssignmentSystem/Views/Shared/_Layout.cshtml
@@ -445,7 +445,7 @@
 
     <footer class="border-top py-3">
         <div class="footer-content text-center text-muted">
-            <small>&copy; @DateTime.UtcNow.Year - TaskAssignmentSystem</small>
+            <small>&copy;2024 - TaskAssignmentSystem</small>
         </div>
     </footer>
 
